Cambio en metodo para cargar imagenes